feat: implement authentication with JWT and security configuration